--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     def work_version = "2.3.4"
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.concurrent:concurrent-futures:1.0.0"
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
